double cta mis en avant sur la page de recap instructeur en instruction (#734)
* mise à jour des templates de validation et de commentaires instructeurs pour coller aux maquettes

* Move columned div containers to calling template + remove useless css class overrides

---------

Co-authored-by: Pierre LEMEE <pierre.lemee@beta.gouv.fr>

--- a/templates/conventions/actions/bailleur_notification.html
+++ b/templates/conventions/actions/bailleur_notification.html
@@ -1,57 +1,11 @@
 {% load custom_filters %}
 
 {% if convention|display_notification_new_convention_instructeur_to_bailleur:request %}
-    <div class="fr-col-12 fr-mb-5w fr-mt-3w">
-        <div role="alert" class="fr-alert fr-alert--info">
-            <h4>Vous avez créé cette convention en lieu et place du bailleur et vous souhaitez sa relecture<h4>
-                <p>Faites en part au bailleur, cette convention passera en statut « En attente de corrections » et
-                    le bailleur pourra vous la renvoyer avec le statut « A instruire »</p>
-                <div>
-                    <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}" data-turbo="false">
-                        {% csrf_token %}
-                        {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
-                        <div class="fr-checkbox-group">
-                            <input
-                                type="hidden"
-                                id="{{notificationForm.from_instructeur.id_for_label}}"
-                                name="{{notificationForm.from_instructeur.html_name}}"
-                                value=1>
-                            <input
-                                type="hidden"
-                                id="{{notificationForm.all_bailleur_users.id_for_label}}"
-                                name="{{notificationForm.all_bailleur_users.html_name}}"
-                                value="on">
-                            <input
-                                type="checkbox"
-                                id="{{notificationForm.send_copy.id_for_label}}"
-                                name="{{notificationForm.send_copy.html_name}}"
-                                checked>
-                            <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">Envoyez-moi une copie du message envoyé
-                            </label>
-                        </div>
-                        <button class="fr-btn">
-                            Notifier le bailleur
-                        </button>
-                    </form>
-                </div>
-            </div>
-            </div>
-            <hr>
-{% endif %}
 
-{% if convention|display_notification_instructeur_to_bailleur:request %}
-    <div class="fr-col-12 fr-py-5w">
-        <div role="alert" class="fr-alert fr-alert--info">
-            {% if convention.get_last_instructeur_notification %}
-                <p>Denière notification du bailleur : {{ convention.get_last_instructeur_notification.cree_le }}</p>
-            {% endif %}
-            {% if convention|display_demande_correction %}
-                <h4>Vous avez ajouté des commentaires à l'attention du bailleur<br>
-                    Demandez des corrections ou précisions</h4>
-            {% else %}
-                <h4>Vous avez ajouté des commentaires à l'attention du bailleur<br>
-                    Faites en part au bailleur</h4>
-            {% endif %}
+    <div role="alert" class="fr-alert fr-alert--Corrections_requises fr-icon-arrow-right-s-line-double h-100">
+        <p class="fr-alert__title">Vous avez créé cette convention en lieu et place du bailleur et vous souhaitez sa relecture<p>
+            <p>Faites en part au bailleur, cette convention passera en statut « En attente de corrections » et
+                le bailleur pourra vous la renvoyer avec le statut « A instruire »</p>
             <div>
                 <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}" data-turbo="false">
                     {% csrf_token %}
@@ -63,6 +17,11 @@
                             name="{{notificationForm.from_instructeur.html_name}}"
                             value=1>
                         <input
+                            type="hidden"
+                            id="{{notificationForm.all_bailleur_users.id_for_label}}"
+                            name="{{notificationForm.all_bailleur_users.html_name}}"
+                            value="on">
+                        <input
                             type="checkbox"
                             id="{{notificationForm.send_copy.id_for_label}}"
                             name="{{notificationForm.send_copy.html_name}}"
@@ -70,17 +29,57 @@
                         <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">Envoyez-moi une copie du message envoyé
                         </label>
                     </div>
-                    {% if convention|display_demande_correction %}
-                        <button class="fr-btn">
-                            Demander des corrections au bailleur
-                        </button>
-                    {% else %}
-                        <button class="fr-btn">
-                            Notifier le bailleur
-                        </button>
-                    {% endif %}
+                    <button class="fr-btn fr-mt-2w">
+                        Notifier le bailleur
+                    </button>
                 </form>
             </div>
+        </div>
+
+            <hr>
+{% endif %}
+
+{% if convention|display_notification_instructeur_to_bailleur:request %}
+
+    <div role="alert" class="fr-alert fr-alert--Corrections_requises fr-icon-arrow-right-s-line-double h-100">
+        {% if convention.get_last_instructeur_notification %}
+            <p>Denière notification du bailleur : {{ convention.get_last_instructeur_notification.cree_le }}</p>
+        {% endif %}
+        {% if convention|display_demande_correction %}
+            <p class="fr-alert__title">Vous avez ajouté des commentaires à l'attention du bailleur<br>
+                Demandez des corrections ou précisions</p>
+        {% else %}
+            <p class="fr-alert__title">Vous avez ajouté des commentaires à l'attention du bailleur<br>
+                Faites en part au bailleur</p>
+        {% endif %}
+        <div>
+            <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}" data-turbo="false">
+                {% csrf_token %}
+                {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
+                <div class="fr-checkbox-group">
+                    <input
+                        type="hidden"
+                        id="{{notificationForm.from_instructeur.id_for_label}}"
+                        name="{{notificationForm.from_instructeur.html_name}}"
+                        value=1>
+                    <input
+                        type="checkbox"
+                        id="{{notificationForm.send_copy.id_for_label}}"
+                        name="{{notificationForm.send_copy.html_name}}"
+                        checked>
+                    <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">Envoyez-moi une copie du message envoyé
+                    </label>
+                </div>
+                {% if convention|display_demande_correction %}
+                    <button class="fr-btn fr-mt-2w">
+                        Demander des corrections au bailleur
+                    </button>
+                {% else %}
+                    <button class="fr-btn fr-mt-2w">
+                        Notifier le bailleur
+                    </button>
+                {% endif %}
+            </form>
         </div>
     </div>
     <hr>
