--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -1,47 +1,48 @@
 {% load custom_filters %}
 {% if convention|display_validation:request %}
-    <div class="fr-col-md-12 fr-mb-5w fr-mt-3w">
-        <div role="alert">
-            {% if convention.is_avenant %}
-                {% include "conventions/avenant/complete_form_for_avenants.html" with form=complete_for_avenant_form %}
-            {% else %}
-                <p class="fr-alert__title">Valider la convention</p>
-                {% with editable_validation=convention|display_deactivated_because_type1and2_config_is_needed|not_op %}
-                    {% if editable_validation %}
-                        <p class="fr-mb-3w">Vous pouvez associer un numéro de convention et valider celle-ci. Elle sera automatiquement transmise au bailleur par email pour signature.</p>
-                    {% else %}
-                        <p class="fr-mb-3w">Avant de pouvoir valider la convention, il vous faut préciser le type de convention I ou II et les options associées dans la section
-                            <strong>Convention de type I & II ci-dessus.</strong></p>
-                    {% endif %}
-                    <div>
-                        <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
-                            {% csrf_token %}
-                            <input id="numberform" type="hidden" name="numberform" value="true" disabled="disabled" />
-                            <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
-                                <div class="fr-col-12 fr-col-md-6">
-                                    {% include "common/form/input_text.html" with form_input=conventionNumberForm.convention_numero editable=editable_validation %}
-                                </div>
-                                <div class="fr-col-12 fr-col-md-6">
-                                    <button class="fr-btn fr-btn--secondary" {% if not editable_validation %}disabled{% endif %}>
-                                        Valider la convention
-                                    </button>
-                                </div>
+    <div role="alert" class="fr-alert fr-alert--A_signer fr-icon-arrow-right-s-line-double h-100">
+        {% if convention.is_avenant %}
+            {% include "conventions/avenant/complete_form_for_avenants.html" with form=complete_for_avenant_form %}
+        {% else %}
+            <p class="fr-alert__title">Valider la convention</p>
+            {% with editable_validation=convention|display_deactivated_because_type1and2_config_is_needed|not_op %}
+                {% if editable_validation %}
+                    <p class="fr-mb-3w">Vous pouvez associer un numéro de convention et valider celle-ci. Elle sera automatiquement transmise au bailleur par email pour signature.</p>
+                {% else %}
+                    <p class="fr-mb-3w">Avant de pouvoir valider la convention, il vous faut préciser le type de convention I ou II et les options associées dans la section
+                        <strong>Convention de type I & II ci-dessus.</strong></p>
+                {% endif %}
+                <div>
+                    <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
+                        {% csrf_token %}
+                        <input id="numberform" type="hidden" name="numberform" value="true" disabled="disabled" />
+                        <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
+                            <div class="fr-col-12">
+                                {% include "common/form/input_text.html" with form_input=conventionNumberForm.convention_numero editable=editable_validation %}
                             </div>
-                        </form>
-                    </div>
-                {% endwith %}
-            {% endif %}
-        </div>
+                            <div class="fr-col-12">
+                                <button class="fr-btn" {% if not editable_validation %}disabled{% endif %}>
+                                    Valider la convention
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="fr-col-12">
+                            <em>Le préfixe du numéro de convention est modifiable dans <a class="fr-link fr-mb-1w" href="{% url 'settings:administrations' %}" data-turbo="false">les paramètres de votre administration</a>
+                            </em>
+                        </div>
+                    </form>
+                </div>
+            {% endwith %}
+        {% endif %}
     </div>
     <hr>
 {% endif %}
 
 {% if convention|display_is_validated %}
-    <div class="fr-col-md-12  fr-py-5w">
-        <div role="alert" class="fr-alert fr-alert--success">
-            <p class="fr-alert__title">{% if convention.is_avenant %}L'avenant a été validé{% else %}La convention a été validée{% endif %} le {{ convention.valide_le|date:"j F Y" }}</p>
-            <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
-        </div>
+    <div role="alert" class="fr-alert fr-alert--success">
+        <p class="fr-alert__title">{% if convention.is_avenant %}L'avenant a été validé{% else %}La convention a été validée{% endif %} le {{ convention.valide_le|date:"j F Y" }}</p>
+        <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
     </div>
     <hr>
 {% endif %}
