--- a/templates/conventions/avenant/new_convention_for_avenant.html
+++ b/templates/conventions/avenant/new_convention_for_avenant.html
@@ -62,7 +62,13 @@
             <label class="fr-label" for="file-upload">Déposer la convention (en PDF)
                 <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf</span>
             </label>
-            <input class="fr-upload" type="file" id="file-upload" name="nom_fichier_signe">
+            <input
+                class="fr-upload"
+                type="file"
+                id="file-upload"
+                name="nom_fichier_signe"
+                accept="application/pdf"
+            >
         </div>
         <div class="fr-col-12 fr-mb-2w">
             {% include "common/form/input_text.html" with form_input=form.numero_avenant mandatory_input=True %}
