--- a/templates/operations/conventions.html
+++ b/templates/operations/conventions.html
@@ -14,6 +14,14 @@
     <div class="fr-container">
         <div class="fr-grid-row fr-grid-row--gutters">
             <div class="fr-my-5w fr-table fr-table--bordered table--layout-fixed">
+                {% if programme is None %}
+                    <div class="fr-col-md-12 fr-mb-5w fr-mt-3w">
+                        <div role="alert" class="fr-alert fr-alert--warning">
+                            <p class="fr-alert__title">L'operation numéro « {{ numero_operation }} » n'est pas disponible sur l'espace de financement du SIAP</p>
+                        </div>
+                    </div>
+                {% endif %}
+
                 {% include "conventions/convention_list.html" with siap_operation=True %}
             </div>
         </div>
