--- a/templates/conventions/actions/cancel_convention.html
+++ b/templates/conventions/actions/cancel_convention.html
@@ -3,15 +3,19 @@
 {% if request|is_bailleur and convention.statut == CONVENTION_STATUT.PROJET or request|is_instructeur %}
     <div class="fr-col-12 fr-mb-5w fr-mt-3w">
         <p class="fr-alert__title">Annuler la convention</p>
-        <p>
-            La convention peut être annulée. Elle sera encore visible et accessible dans la liste des conventions
-        </p>
+        <div class="block--row-strech">
+            <div class="block--row-strech-1 fr-mr-6w">
+                <p class="fr-mb-0">
+                    La convention peut être annulée. Elle sera encore accessible dans la liste des conventions
+                </p>
+            </div>
+            <form method="post" action="{% url 'conventions:cancel' convention_uuid=convention.uuid %}" data-turbo="false">
+                {% csrf_token %}
+                <button class="fr-btn apilos-btn--secondary--red fr-my-1w fr-icon-close-circle-line fr-btn--icon-left">
+                    Annuler cette convention
+                </button>
+            </form>
+        </div>
     </div>
-    <form method="post" action="{% url 'conventions:cancel' convention_uuid=convention.uuid %}" data-turbo="false">
-        {% csrf_token %}
-        <button name="SubmitConvention" value=True class="fr-btn fr-my-3w">
-            Annuler cette convention
-        </button>
-    </form>
     <hr>
 {% endif %}
