--- a/templates/500.html
+++ b/templates/500.html
@@ -12,7 +12,7 @@
                             Nos équipes techniques travaillent actuellement à la mise en place de cette fonctionnalité.
                         </p>
                         <p class="fr-mb-3w">
-                            Nous vous prions de nous excuser pour la gène occasionnée. Si votre besoin est urgent, merci decontacter notre assistance à l'adresse suivante : <a href="mailto:contact@apilos.beta.gouv.fr" target="_blank">contact@apilos.beta.gouv.fr</a>.
+                            Nous vous prions de nous excuser pour la gène occasionnée. Si votre besoin est urgent, merci de contacter notre assistance à l'adresse suivante : <a href="mailto:contact@apilos.beta.gouv.fr" target="_blank">contact@apilos.beta.gouv.fr</a>.
                         </p>
                     {% elif specific_error == 'not_handled_association_hlm' %}
                         <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Votre habilitation n'est pas prise en charge par le module conventionnement du SIAP (APiLos).</h2>
