--- a/templates/conventions/actions/cancel_convention.html
+++ b/templates/conventions/actions/cancel_convention.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-{% if request|is_bailleur and convention.statut == CONVENTION_STATUT.PROJET or request|is_instructeur %}
+{% if convention|display_cancel_convention %}
     <div class="fr-col-12 fr-mb-5w fr-mt-3w">
         <p class="fr-alert__title">Annuler la convention</p>
         <div class="block--row-strech">
@@ -9,10 +9,29 @@
                     La convention peut être annulée. Elle sera encore accessible dans la liste des conventions
                 </p>
             </div>
-            <form method="post" action="{% url 'conventions:cancel' convention_uuid=convention.uuid %}" data-turbo="false">
+            <form method="post" data-turbo="false" action="#top">
                 {% csrf_token %}
-                <button class="fr-btn apilos-btn--secondary--red fr-my-1w fr-icon-close-circle-line fr-btn--icon-left">
+                <button class="fr-btn apilos-btn--secondary--red fr-my-1w fr-icon-close-circle-line fr-btn--icon-left" name='cancel_convention' value=1>
                     Annuler cette convention
+                </button>
+            </form>
+        </div>
+    </div>
+    <hr>
+{% endif %}
+{% if convention|display_reactive_convention %}
+    <div class="fr-col-12 fr-mb-5w fr-mt-3w">
+        <p class="fr-alert__title">Ré-activer la convention</p>
+        <div class="block--row-strech">
+            <div class="block--row-strech-1 fr-mr-6w">
+                <p class="fr-mb-0">
+                    La convention est annulée mais elle peut-être réactivée. Son statut passera à nouveau en Convention en Projet
+                </p>
+            </div>
+            <form method="post" data-turbo="false" action="#top">
+                {% csrf_token %}
+                <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-close-circle-line fr-btn--icon-left" name='reactive_convention' value=1>
+                    Réactiver cette convention
                 </button>
             </form>
         </div>
