--- a/templates/conventions/avenant/list_avenants_for_avenant.html
+++ b/templates/conventions/avenant/list_avenants_for_avenant.html
@@ -1,11 +1,11 @@
 {% load custom_filters %}
-{% if conventions.paginated_conventions %}
+{% if conventions %}
     <section class="fr-accordion">
         <h2 class="fr-accordion__title">
             <button class="fr-accordion__btn" aria-expanded="false" aria-controls="accordion-106">Avenants déjà déposés</button>
         </h2>
         <div class="fr-collapse" id="accordion-106">
-            {% for convention in conventions.paginated_conventions %}
+            {% for convention in conventions %}
                 {% if convention.numero is not None %}
                     <ul>
                         <li>
