--- a/templates/conventions/home/_tab.html
+++ b/templates/conventions/home/_tab.html
@@ -1,12 +1,12 @@
 {% if tab_active %}
     {# If tab is currently open, no link needed #}
     <li>
-        <div class="fr-tabs__tab" aria-selected="true">{{ count }} convention{% if count > 1 %}s{% endif %} {{ label }}</div>
+        <div class="fr-tabs__tab" aria-selected="true">{{ count }} {{ title }}</div>
     </li>
 {% else %}
     <li>
         <a class="fr-tabs__tab" href="{% url route %}?{{ request.GET|to_query_params }}" title="{{ title }}" aria-selected="false" >
-            <span class="fr-link">{{ count }} convention{% if count > 1 %}s{% endif %} {{ label }} </span>
+            <span class="fr-link">{{ count }} {{ title }}</span>
         </a>
     </li>
 {% endif %}
